--- a/TwitchChatDownloader/TwitchChatDownloader.csproj
+++ b/TwitchChatDownloader/TwitchChatDownloader.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.7.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20427.1" />
   </ItemGroup>
 
