--- a/TwitchChatDownloader/TwitchChatDownloader.csproj
+++ b/TwitchChatDownloader/TwitchChatDownloader.csproj
@@ -5,6 +5,13 @@
     <TargetFramework>net5.0</TargetFramework>
     <Version>0.1.0</Version>
     <Nullable>enable</Nullable>
+    <Authors>Matushkin Vladimir</Authors>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <NeutralLanguage>en</NeutralLanguage>
+    <RepositoryUrl>https://github.com/orikama/TwitchChatDownloader</RepositoryUrl>
+    <Description>Download chat logs from past broadcasts on Twitch.tv</Description>
+    <PackageTags>twitch</PackageTags>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -14,11 +21,20 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <Optimize>true</Optimize>
+    <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.7.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20427.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
